added Requests for controllers
